# vistools

./: .gitignore  LICENSE  pyproject.toml
.github/workflows/: testing.yml
src/vistools/: __init__.py
tests/: __init__.py  conftest.py  test_pyvista_camera.py  test_pyvista_extrude_shell_surface.py  test_pyvista_merge_grids.py  test_pyvista_nonlinear_subdivision.py  test_pyvista_polyline_cross_section.py  test_pyvista_scalar_bar_to_tikz.py  test_pyvista_sort_grid.py  test_pyvista_temporal_interpolator.py  test_vtk_compare_grids.py  test_vtk_merge_polylines.py  test_vtk_merge_polylines_create_reference_files.py  test_vtk_normal_field.py  test_vtk_polyline_cross_section.py
tests/test_files/: pyvista_extrude_shell_surface.vtu  pyvista_generate_nonlinear_subdivision_hex27_edges.vtu  pyvista_generate_nonlinear_subdivision_hex27_surface.vtu  pyvista_generate_nonlinear_subdivision_quad9_edges.vtu  pyvista_generate_nonlinear_subdivision_quad9_surface.vtu  pyvista_merge_grids_mixed_cell_types.vtu  pyvista_polyline_cross_section_closed_connected.vtu  pyvista_polyline_cross_section_closed_separate.vtu  pyvista_polyline_cross_section_open_connected.vtu  pyvista_polyline_cross_section_open_separate.vtu  pyvista_scalar_bar_to_tikz.tex  pyvista_temporal_interpolator_interpolated.vtu  shell.vtu  sort_serial.vtu  vtk_compare_grids_equal.vtu  vtk_merge_polylines.vtu  vtk_merge_polylines_clean.vtu  vtk_merge_polylines_closed_default.vtu  vtk_merge_polylines_closed_default_clean.vtu  vtk_merge_polylines_closed_large_angle.vtu  vtk_merge_polylines_closed_large_angle_clean.vtu  (+6 more)
(+17 files in other folders)
