[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">= 3.10"
name = "vistools"
authors = [
    {name = "Ivo Steinbrecher", email = "ivo.steinbrecher@unibw.de"},
]
description = "Utility functionality for vtk and pyvista"
dependencies = [
    "numpy",
    "scipy",
    "vtk"
]
readme = "README.md"

dynamic = ["version"]

[tool.setuptools_scm]
version_file = "src/vistools/version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"

[project.urls]
Repository = "https://github.com/isteinbrecher/vistools/"
Issues = "https://github.com/isteinbrecher/vistools/issues/"

[project.optional-dependencies]
pyvista = [
  "pyvista",
  "opencv-python"
]
dev = [
  "pre-commit",
  "pytest",
  "pytest-cov"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p pytest_cov --cov-report=term --cov-report=html --cov=src/"
